--- a/package.json
+++ b/package.json
@@ -8,16 +8,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@redmin_delishaj/react-native-select": "^1.0.6",
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
+    "font": "^0.0.4",
+     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-web": "^0.19.4",
     "webpack-config": "^7.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint-config-universe": "^11.2.0",
+    "prettier": "^2.8.8",
+    "eslint": "^8.41.0"
+  },
+
+  "eslintConfig": {
+    "extends": "universe/native"
   },
   "private": true
 }
