--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
     "font": "^0.0.4",
-     "react": "18.2.0",
+    "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "^0.19.4",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "webpack-config": "^7.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "eslint": "^8.41.0",
     "eslint-config-universe": "^11.2.0",
-    "prettier": "^2.8.8",
-    "eslint": "^8.41.0"
+    "prettier": "^2.8.8"
   },
-
   "eslintConfig": {
     "extends": "universe/native"
   },
